# quantumsim-gui

./: .gitignore  ExtractIcon.cs  README.md  analyze_icon.ps1  build_release.ps1  check_all_sizes.ps1  check_ico.ps1  clear_icon_cache.ps1  extract_exe_icon.ps1  extract_icon_win32.ps1  full_rebuild.ps1  gen_icon.cjs  index.html  kill_gui.ps1  make_ico.ps1  make_ico_v2.ps1  package-lock.json  package.json  rebuild_clean.ps1  rebuild_icons.ps1  run_extract.ps1  screenshot.ps1  start_gui.ps1  tauri_full_build.ps1  tsconfig.json  tsconfig.tsbuildinfo  verify_exe_icon.ps1  verify_ico_layers.ps1  verify_ico_node.cjs  verify_icon.cjs  verify_icon.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dll_bridge.rs  ffi_types.rs  lib.rs  main.rs
src/components/: CircuitGrid.tsx  ControlBar.tsx  GatePanel.tsx  HistoryLog.tsx  ProbabilityChart.tsx  VortexCanvas.tsx
src/lib/: api.ts  types.ts
src/styles/: globals.css
